--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,12 +8,21 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <div id="quoteDisplay" style="margin-bottom: 20px;"></div>
+  <!-- Category filter -->
+  <label for="categoryFilter">Filter by Category:</label>
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+  </select>
+
+  <!-- Quote display -->
+  <div id="quoteDisplay" style="margin: 20px 0;"></div>
   <button id="newQuote">Show New Quote</button>
 
+  <!-- Form container -->
   <h3>Add Your Own Quote</h3>
   <div id="formContainer"></div>
 
+  <!-- Import/Export -->
   <h3>Import/Export Quotes</h3>
   <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
   <button onclick="exportToJsonFile()">Export to JSON</button>
